# aws-whoami

./: README.md  pyproject.toml
whoami/: api.py
