[tool.poetry]
name = "whoami"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
rich = "^13.3.3"
requests = "^2.28.2"

[tool.poetry.scripts]
start = "whoami.api:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
